# POO_8_4_2022

./: .gitignore  CMakeLists.txt  README.md
10_4/: Array.h  SimpleList.h  main.cpp  test_template.h
11_4/: Catalog.cpp  Catalog.h  Student.cpp  Student.h  main.cpp
22_5/: Array.h  main.cpp
27_5/: main.cpp
28_5/: Biblioteca.cpp  Biblioteca.h  Carte.cpp  Carte.h  Revista.cpp  Revista.h  Roman.cpp  Roman.h  main.cpp
9_5/: Phrase.cpp  Phrase.h  main.cpp
NumberRezolvare1/: Decimal.cpp  Decimal.h  Hexazecimal.cpp  Hexazecimal.h  Number.cpp  Number.h  Printer.cpp  Printer.h  subiect problema 3.cpp  subiect problema 3.vcxproj
ShoppingListRezolvare1/: Food.cpp  Food.h  Item.cpp  Item.h  Miscellaneous.cpp  Miscellaneous.h  ShoppingList.cpp  ShoppingList.h  main (1).cpp
ShoppingListRezolvare2/: Food.cpp  Food.h  Item.cpp  Item.h  Miscellaneous.cpp  Miscellaneous.h  ShoppingList.cpp  ShoppingList.h  problema 2.cpp  problema 2.vcxproj
rezolvari/advanced/P1/withComments/: Catalog.cpp  Catalog.h  StringFunctions.cpp  Student.h  main.cpp
rezolvari/advanced/P1/withoutComments/: Catalog.cpp  Catalog.h  StringFunctions.cpp  StringFunctions.h  Student.cpp  Student.h  main.cpp
rezolvari/advanced/Problema_1/: Punct.cpp  Punct.h  Rectangle.h
rezolvari/advanced/Problema_1/withoutComments/: Rectangle.cpp
rezolvari/basic/P1/withComments/: Catalog.cpp  Catalog.h  Student.cpp  Student.h  main.cpp
rezolvari/basic/P1/withoutComments/: Catalog.cpp  Catalog.h  Student.cpp  Student.h  main.cpp
rezolvari/basic/Problema_1/: main.cpp
rezolvari/basic/Problema_1/withoutComments/: Punct.h  Rectangle.cpp  Rectangle.h
rezolvari/basic/Problema_4/: Propozitie.h  main.cpp
rezolvari/basic/Problema_4/withoutComments/: Propozitie.cpp
rezolvari/basic/Problema_5/withoutComments/: SimpleList.h  main.cpp
rezolvari/expert/P1/withComments/: Catalog.cpp  Catalog.h  String.cpp  String.h  Student.cpp  main.cpp
rezolvari/expert/P1/withoutComments/: Catalog.cpp  Catalog.h  String.cpp  String.h  Student.cpp  Student.h
