cmake_minimum_required(VERSION 3.22)
project(POO_8_4_2022)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        basic_P1
        rezolvari/basic/P1/withoutComments/main.cpp
        rezolvari/basic/P1/withoutComments/Catalog.cpp
        rezolvari/basic/P1/withoutComments/Catalog.h
        rezolvari/basic/P1/withoutComments/Student.h
        rezolvari/basic/P1/withoutComments/Student.cpp
)
